# PersonalDevControl

./: .gitignore  CMakeLists.txt  LICENSE  PersonalDevControl.sln  PersonalDevControl.vcxproj  PersonalDevControl.vcxproj.filters  README.md  loginMongo.ui  loginmongo.cpp  loginmongo.h  main.cpp  modelTask.cpp  modelTask.h  personaldevcontrol.cpp  personaldevcontrol.h  personaldevcontrol.qrc  personaldevcontrol.ui  rebuild.sh  setup.md  ui_loginMongo.h  ui_personaldevcontrol.h
.github/workflows/: README.md  build-and-test.yml  build.yml  code-style.yml  dependency-check.yml  documentation.yml
code/: PersonalDevControl.sln  PersonalDevControl.vcxproj  PersonalDevControl.vcxproj.filters  apimongo.cpp  apimongo.h  loginMongo.ui  loginmongo.cpp  loginmongo.h  main.cpp  modelTask.cpp  modelTask.h  personaldevcontrol.cpp  personaldevcontrol.h  personaldevcontrol.qrc  personaldevcontrol.ui
docs/: MONGODB_MIGRATION_TESTING.md  README.md  database.md
include/models/: modelTask.hpp  modelUser.hpp
include/ui/: loginmongo.hpp  personaldevcontrol.hpp
resources/: README.md
scripts/: validate_mongodb.sh
src/: main.cpp
src/controllers/: README.md
src/core/: CMakeLists.txt  apimongo.cpp  apimongo.h
src/models/: CMakeLists.txt  modelTask.cpp  modelTask.h  modelUser.cpp
src/ui/: CMakeLists.txt  LoginTasks.ui  loginMongo.ui  loginmongo.cpp  loginmongo.h  personaldevcontrol.cpp  personaldevcontrol.h
src/utils/: README.md
tests/: README.md
